--- a/MoM-05-07.md
+++ b/MoM-05-07.md
@@ -25,7 +25,7 @@ Weekly Co-Ops Agenda & Minutes
 - **Contact:** Julian <mail@julianbrooks.net>
 - **Host:** JB
 - **Reference:** - [Last weeks' meeting minutes](https://github.com/aragoncoop/meetings-and-minutes/blob/master/MoM-04-29.md)
-
+- **Recording of meeting:** - is [here](https://www.dropbox.com/s/7brp8mpgog12ww2/aragoncoop%20on%202019-05-07%2016%3A05.mp4?dl=0)
 :::
 
 ###
